force-app/main/default/objects/Leave_Balance_History__c/Leave_Balance_History__c.object-meta.xml
<CustomObject>
    <description>This object functions as a detailed audit log for all changes to an employee&apos;s leave balances. Each record documents a single transaction, whether days were acquired, deducted, or corrected, providing a transparent and traceable history of how an employee&apos;s leave balance has been updated over time.</description>
    <label>Leave Balance History</label>
    <nameField>
        <displayFormat>LBH-{00000}</displayFormat>
        <label>History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Balance Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>