force-app/main/default/objects/Leave_Balance_History__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the employee whose leave balance was affected by this specific movement.</description>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leave_Balance_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>