force-app/main/default/objects/Leave_Balance_History__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <description>Specifies which type of leave balance was changed (e.g., Paid Leave, RTT).</description>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Leave</fullName>
            </value>
            <value>
                <fullName>RTT</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>