force-app/main/default/objects/Leave_Balance_History__c/fields/Movement_Date__c.field-meta.xml
<CustomField>
    <fullName>Movement_Date__c</fullName>
    <description>The exact date and time when the balance change occurred.</description>
    <label>Movement Date</label>
    <type>Date</type>
</CustomField>