force-app/main/default/objects/Leave_Balance_History__c/fields/Movement_Type__c.field-meta.xml
<CustomField>
    <fullName>Movement_Type__c</fullName>
    <description>Categorizes the nature of the balance change (e.g., Accrual, Deduction, Correction).</description>
    <label>Movement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accrual</fullName>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>