force-app/main/default/objects/Leave_Balance_History__c/fields/New_Balance__c.field-meta.xml
<CustomField>
    <fullName>New_Balance__c</fullName>
    <description>Shows the employee&apos;s leave balance after this specific movement has been applied.</description>
    <label>New Balance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>