force-app/main/default/objects/Leave_Balance_History__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <description>The quantity of days added or deducted in this particular transaction.</description>
    <label>Number of Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>