force-app/main/default/objects/Leave_Balance_History__c/fields/Source_of_Movement__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Movement__c</fullName>
    <description>Explains the origin of the balance change (e.g., &quot;Monthly Accrual,&quot; &quot;Approved Request LREQ-001&quot;).</description>
    <label>Source of Movement</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>